[package]
name = "grid-master"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Add a debug feature to your own Cargo.toml, make it default
[features]
debug = ["bevy-debug-text-overlay/debug"]
default = ["debug"]

[dependencies]
bevy = "0.10.1"
bevy-debug-text-overlay = { version = "5.0", default-features = false, features = ["builtin-font"] }
